--- a/basic_torch/tensor_intro.ipynb
+++ b/basic_torch/tensor_intro.ipynb
@@ -153,11 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "96e91540",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Git config\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Git config\")"
+   ]
   },
   {
    "cell_type": "code",
